--- a/client/src/app/account/account.page.scss
+++ b/client/src/app/account/account.page.scss
@@ -291,7 +291,7 @@ ion-list {
 }
 
 .button-clear {
-    color: white;
+    color: var(--ion-color-dark);
     opacity: 80%;
     --background-hover: unset;
 }
