--- a/client/src/app/exercise-notes-modal/exercise-notes-modal.component.html
+++ b/client/src/app/exercise-notes-modal/exercise-notes-modal.component.html
@@ -2,8 +2,8 @@
     <ion-toolbar>
         <ion-title>{{ 'notes_for' | translate }} {{exerciseName}}</ion-title>
         <ion-buttons slot="end">
-            <ion-button (click)="dismiss()">Cancel</ion-button>
-            <ion-button (click)="save()" strong>Save</ion-button>
+            <ion-button (click)="dismiss()">{{ 'cancel' | translate }}</ion-button>
+            <ion-button (click)="save()" strong>{{ 'save' | translate }}</ion-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
