--- a/client/src/app/form/exercise-form/exercise-form.component.scss
+++ b/client/src/app/form/exercise-form/exercise-form.component.scss
@@ -126,3 +126,8 @@ ion-item.rep-row {
 ion-item-sliding {
     margin-bottom: 4px;
 }
+
+.picker-min-width {
+    width: 0px;
+    padding-left: 5px;
+}
