--- a/client/src/app/register/register.page.html
+++ b/client/src/app/register/register.page.html
@@ -14,12 +14,12 @@
         <div class="banner">
             <div class="banner_img center_img">
                 <img src="assets/images/banner_img.png" class="crop_img">
-                <div _ngcontent-ng-c2626598366="" class="logo animate__animated animate__fadeInUp">
+                <div class="logo animate__animated animate__fadeInUp">
                     <h1>{{ 'welcome' | translate }}!</h1>
                 </div>
             </div>
         </div>
-        <div class="form">
+        <div class="form ion-padding-top">
             <ion-list lines="none">
                 <ion-radio-group #group formControlName="type">
                     <ion-item>
